fix: Fixed hero not overflow hidden

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -254,7 +254,7 @@ a[href].direct-link:focus:visited,
 }
 
 /* Index */
-.hero {
+#hero {
   position: relative;
   overflow: hidden;
 }
